--- a/main/css/master.css
+++ b/main/css/master.css
@@ -1,4 +1,6 @@
 
+
+
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@ body {
   background-color: #111;
   /*background-image: url(../src/img/mat/capt.png);
   background-size: cover;*/
+  overflow: hidden;
 
 }
 
@@ -17,8 +20,7 @@ body {
 
 #main {
   /*transform: rotate(0deg);*/
-  transition: transform 0.3s ease;
-
+  transition: transform 0.5s ease;
 }
 
 
@@ -139,29 +141,46 @@ fill: #888;*/
 }
 
 .txt {
-  overflow: hidden;
+  overflow-x: hidden;
   transition: all ease 0.5s;
-
+  transition-delay: 0.5s;
   background-color: #333;
-  height: 800px;
+  height: 0px;
   width: 600px;
 }
 
-.txt p {
+.txt {
+  /*padding-right: 10px;*/
+}
+
+
+.txt * {
   margin: 0;
   font-size: 17px;
   color: #ccc;
   font-family: sans-serif;
-  padding: 20px;
 }
+
+.txt h4 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.cont {
+  margin: 20px;
+  font-size: 17px;
+  letter-spacing: 1px;
+  line-height: 20px;
+}
+
 
 .line {
   stroke: #ccc;
   stroke-width: 1;
   fill: transparent;
 
-  transition: all ease 0.5s;
-  transition-delay: 0s;
+  transition: all ease-out 0.5s;
+  transition-delay: 0.1s;
 
   stroke-dasharray: 1000;
   stroke-dashoffset: -1000;
